rust/macros/tests/invalid/target/debug/deps/only_arrow-89fc4521d77b5be8.d
/Users/hhayk/Exercism/rust/macros/tests/invalid/target/debug/deps/only_arrow-89fc4521d77b5be8.d: only_arrow.rs Cargo.toml

/Users/hhayk/Exercism/rust/macros/tests/invalid/target/debug/deps/libonly_arrow-89fc4521d77b5be8.rmeta: only_arrow.rs Cargo.toml

only_arrow.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
